# ml-ci-cd-demo

./: Dockerfile  argo.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci-cd.yml
data/: data.csv  data.csv.dvc
k8s/: manifest.yaml
model/: model.pkl.dvc
src/: app.py  train.py
