[project]
name = "ci-cd-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]==3.64.1",
    "fastapi==0.123.8",
    "joblib==1.5.2",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "pathspec<1",
    "pydantic==2.12.5",
    "scikit-learn==1.7.2",
    "uvicorn==0.38.0",
]
